--- a/python/股票源码.md
+++ b/python/股票源码.md
@@ -2,4 +2,5 @@
 
 ### github
 - https://github.com/jaungiers/LSTM-Neural-Network-for-Time-Series-Prediction
-- 
+- 几个股票技术指标 
+- [Quant-trading](https://github.com/je-suis-tm/quant-trading)
