--- a/python/股票源码.md
+++ b/python/股票源码.md
@@ -4,3 +4,8 @@
 - https://github.com/jaungiers/LSTM-Neural-Network-for-Time-Series-Prediction
 - 几个股票技术指标 
 - [Quant-trading](https://github.com/je-suis-tm/quant-trading)
+
+
+### 行情类库
+
+- [行情](https://github.com/rainx/pytdx)
