--- a/python/股票源码.md
+++ b/python/股票源码.md
@@ -9,3 +9,9 @@
 ### 行情类库
 
 - [行情](https://github.com/rainx/pytdx)
+
+
+#### 策略
+
+- [策略](https://github.com/fmzquant/strategies)
+- [海龟交易法则](https://github.com/sngyai/Sequoia)
