--- a/python/股票源码.md
+++ b/python/股票源码.md
@@ -15,3 +15,6 @@
 
 - [策略](https://github.com/fmzquant/strategies)
 - [海龟交易法则](https://github.com/sngyai/Sequoia)
+
+#### 其他缠论实现
+https://github.com/zengbin93/chan
