--- a/python/股票源码.md
+++ b/python/股票源码.md
@@ -7,7 +7,7 @@
 
 
 ### 行情类库
-
+git
 - [行情](https://github.com/rainx/pytdx)
 
 
@@ -15,3 +15,13 @@
 
 - [策略](https://github.com/fmzquant/strategies)
 - [海龟交易法则](https://github.com/sngyai/Sequoia)
+
+
+## python 学习类库
+
+### 类库
+-[awesome-python](https://github.com/vinta/awesome-python#testing)
+
+-[PythonDataScienceHandbook](https://github.com/jakevdp/PythonDataScienceHandbook)
+
+-[Python-100-Days](https://github.com/jackfrued/Python-100-Days)
