--- a/python/用到过的类库.md
+++ b/python/用到过的类库.md
@@ -1,10 +1,16 @@
 
+ ### 量化
+
+ 掘金 策略回测
+ 聚宽 股票数据
+ 
  ### 股票类
 
 #### 股票信息
 
 - 股票信息  TuShare
 - 股票的常用指标 stockstats
+- ta-lib 
 
 #### 用于训练的数据集
 
@@ -43,3 +49,7 @@ QuantConnect/Lean - Lean Algorithmic Trading Engine by QuantConnect (C#, Python,
 
 QUANTAXIS - 量化金融策略框架
 
+
+## 客户端
+
+  ScottPlot
